Replace ‘get(0)’ with ‘getFirst()’ across various classes #deploy-test-pdl-forvalter
Updated various methods across multiple classes in the PDL forvalter to utilize 'getFirst()' instead of 'get(0)'. This change enhances readability and reduces potential for errors. Also included some additional minor changes like addition of null filters and additional variable declarations.